support theme on search bar

--- a/src/styles/inputs.scss
+++ b/src/styles/inputs.scss
@@ -11,5 +11,5 @@
 
 .input-field:focus {
     outline: none;
-    border: 1px solid colors.$COLOR_TURQUOISE_BLUE;
+    border: 1px solid colors.$COLOR_WHITE;
 }
