--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,7 @@
 $COLOR_BLACK: #000000;
 
+$COLOR_TRANSPARENT: rgba(0, 0, 0, 0);
+
 $COLOR_WHITE: #FFFFFF;
 $COLOR_WHITE_20: rgba(255, 255, 255, 0.2);
 $COLOR_WHITE_40: rgba(255, 255, 255, 0.4);
